@@ -807,6 +807,8 @@
             option.
     * Add upstream Rev. 3158:
       - Update: /www/agc/vdc_db_query.php: Typo.
+    * Change size of LISTEN/BARGE/WISPER on realtime:
+      - Update: www/vicidial/AST_timeonVDADall.php.
     * Change next release to 3.0.1.
 
 2.26.29
